Fix Overflow Bug
 Fixed bug, where making favorite cities tab scrollable would cause overflow.

--- a/src/app/components/containers/sidebar-container/sidebar-container.component.css
+++ b/src/app/components/containers/sidebar-container/sidebar-container.component.css
@@ -7,6 +7,9 @@
 
     background-color: var(--outer-black-main);
     padding: 35px 60px 72px 60px;
+
+    /* Prevent vertical overflow */
+    max-height: 100vh;
 }
 
 /* Making Both Containers Flex Containers */
